tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/admissionregistration.k8s.io_v1_mutatingadmissionpolicy_chrysopoeia-chrysopoeia-instances-namespaced-requires-labels.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicy
metadata:
  annotations:
    description: |
      This policy ensures that all resources created in namespaces with the label "chrysopoeia.io/instance"
      have the dependency labels starting with "requires.helmetica.io/".
      It copies the labels from the namespace to the resource being created.

      This allows the chrysopoeia proxy to filter access for operators that require cluster scoped access.
  name: chrysopoeia-chrysopoeia-instances-namespaced-requires-labels
  namespace: syn-helmetica-framework
spec:
  failurePolicy: Fail
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: chrysopoeia.io/instance
        operator: Exists
    resourceRules:
    - apiGroups:
      - '*'
      apiVersions:
      - '*'
      operations:
      - CREATE
      resources:
      - '*'
  mutations:
  - jsonPatch:
      expression: |
        ('labels' in object.metadata ? [] : [
          JSONPatch{
            op: "add",
            path: "/metadata/labels",
            value: {}
          },
        ]) + namespaceObject.?metadata.?labels.orValue({}).map(k,
          k.startsWith('requires.helmetica.io/') && !(k in object.metadata.?labels.orValue({})),
          JSONPatch{
            op: "add",
            path: "/metadata/labels/" + jsonpatch.escapeKey(k),
            value: ""
          }
        )
    patchType: JSONPatch
  reinvocationPolicy: IfNeeded
