tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/admissionregistration.k8s.io_v1_mutatingadmissionpolicybinding_chrysopoeia-chrysopoeia-instances-namespaced-requires-labels.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicyBinding
metadata:
  name: chrysopoeia-chrysopoeia-instances-namespaced-requires-labels
  namespace: syn-helmetica-framework
spec:
  policyName: chrysopoeia-instances-namespaced-requires-labels
