tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_chrysopoeia-dynamic-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: chrysopoeia-dynamic-webhook
webhooks: []
