tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_chrysopoeia-dynamic-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: chrysopoeia-system/chrysopoeia-serving-cert
  name: chrysopoeia-dynamic-webhook
webhooks: []
