tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/apps_v1_deployment_chrysopoeia-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    chrysopoeia-component: proxy
  name: chrysopoeia-proxy
  namespace: syn-helmetica-framework
spec:
  replicas: 1
  selector:
    matchLabels:
      chrysopoeia-component: proxy
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: proxy
      labels:
        chrysopoeia-component: proxy
    spec:
      containers:
      - args:
        - proxy
        - --addr=:8443
        - --cert-path=/tmp/proxy-serving-certs
        - --injected-label=requires.helmetica.io/mariadbs.k8s.mariadb.com
        env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ghcr.io/helmetica-framework/chrysopoeia:v0.1.0-dev8
        name: proxy
        ports: []
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/proxy-serving-certs
          name: proxy-serving-certs
          readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: chrysopoeia-proxy
      terminationGracePeriodSeconds: 10
      volumes:
      - name: proxy-serving-certs
        secret:
          items:
          - key: ca.crt
            path: ca.crt
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          optional: false
          secretName: proxy-serving-cert
