tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/cert-manager.io_v1_certificate_chrysopoeia-proxy-serving-cert.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: chrysopoeia
  name: chrysopoeia-proxy-serving-cert
  namespace: syn-helmetica-framework
spec:
  dnsNames:
  - chrysopoeia-proxy.chrysopoeia-proxy-system.svc
  - chrysopoeia-proxy.chrysopoeia-proxy-system.svc.cluster.local
  issuerRef:
    kind: Issuer
    name: chrysopoeia-selfsigned-issuer
  secretName: proxy-serving-cert
