tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/rbac.authorization.k8s.io_v1_clusterrole_chrysopoeia-proxy-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: chrysopoeia-proxy-role
rules:
- apiGroups:
  - '*'
  resources:
  - '*'
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - authentication.k8s.io
  resources:
  - tokenreviews
  verbs:
  - create
- apiGroups:
  - authorization.k8s.io
  resources:
  - subjectaccessreviews
  verbs:
  - create
- apiGroups:
  - ""
  - authentication.k8s.io
  resources:
  - '*'
  verbs:
  - impersonate
- apiGroups:
  - ""
  resources:
  - serviceaccounts
  verbs:
  - get
  - list
  - watch
