tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/rbac.authorization.k8s.io_v1_clusterrole_image-reflector-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: image-reflector-manager-role
rules:
- apiGroups:
  - ""
  resources:
  - events
  verbs:
  - create
  - patch
- apiGroups:
  - ""
  resources:
  - namespaces
  - secrets
  - serviceaccounts
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - ""
  resources:
  - serviceaccounts/token
  verbs:
  - create
- apiGroups:
  - image.toolkit.fluxcd.io
  resources:
  - imagepolicies
  - imagerepositories
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - image.toolkit.fluxcd.io
  resources:
  - imagepolicies/status
  - imagerepositories/status
  verbs:
  - get
  - patch
  - update
