tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/rbac.authorization.k8s.io_v1_clusterrolebinding_chrysopoeia-dynamic-crds-admin-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: chrysopoeia-dynamic-crds-admin-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: chrysopoeia-dynamic-crds-admin
subjects:
- kind: ServiceAccount
  name: chrysopoeia-controller-manager
  namespace: syn-helmetica-framework
