tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/rbac.authorization.k8s.io_v1_clusterrolebinding_helm-manager-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: helm-manager-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: helm-manager-role
subjects:
- kind: ServiceAccount
  name: default
  namespace: syn-helmetica-framework
