tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/syn-helmetica-framework_rbac.authorization.k8s.io_v1_rolebinding_source-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: source-leader-election-rolebinding
  namespace: syn-helmetica-framework
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: source-leader-election-role
subjects:
- kind: ServiceAccount
  name: default
  namespace: syn-helmetica-framework
