tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/v1_service_chrysopoeia-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrysopoeia-proxy
  namespace: syn-helmetica-framework
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    chrysopoeia-component: proxy
