tests/golden/defaults/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/v1_serviceaccount_chrysopoeia-proxy.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: chrysopoeia-proxy
  namespace: syn-helmetica-framework
